--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "@roramigator",
   "licence": "MIT",
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
