--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "start": "webpack-dev-server --no-info --mode=development",
+    "start": "webpack-dev-server --host=0.0.0.0 --mode=development",
     "build": "webpack --mode=production"
   },
   "keywords": [],
